tests/positive/StdlibList/Data/Ord.juvix
module Data.Ord;

type Ordering :=
  | LT : Ordering
  | EQ : Ordering
  | GT : Ordering;

open Ordering using {LT; EQ; GT} public;
