tests/negative/Internal/TargetNotATrait.juvix
module TargetNotATrait;

type Maybe A :=
  | just A
  | nothing;

open Maybe;

instance
inst {A} : Maybe A := nothing;
